--- a/index.html
+++ b/index.html
@@ -38,5 +38,62 @@
 			<div class="card">
 				<div class="card-block">
 					<h4 class="card-title">Skills</h4>
+					<p>
+						Econometrics
+						<progress class="progress progress-info"value="50" max="100">50%</progress>
+					<p>
+						HTML
+						<progress class="progress progress-info" value="25" max="100">25%</progress>
+					</p>
+					<p>
+						CSS
+						<progress class="progress progress-info" value="25" max="100">25%</progress>
+					</p>
+					<p>
+						Sensitivity Analysis
+						<progress class="progress progress-warning" value="75" max="100">75%</progress>
+					</p>
+				</p>
+			</div>
+		</div>
+	
+			
+		</div>
+		<div class="col-md-8">
+          <div class="card">
+            <div class="card-block">
+              <h4 class="card-title">About me</h4>
+              <p class="card-text">
+                Economist with background in banking, marketing for financial services and product development. Expertise in market analysis, forecasting & sensitivity analysis. Passionate about evidence based policy making including economic impact assessment, cost benefit analysis and behavioural insights.
+              </p>
+            </div>
+          </div>
+
+ <div class="card">
+            <div class="card-block">
+              <h4 class="card-title">Work Experience</h4>
+              <p class="card-text">
+                <strong>Product Manager</strong>
+                <small>Since Jan 2017 to Dec 2017.</small>
+                <br>
+                Responsible for the end to end product development cycle to boost EGBANK market share through introducing new products, enhancing existing ones & changing the organization’s culture aiming at delivering personalized value proposition for our individual clients.
+              </p>
+              <p class="card-text">
+                <strong>Product Management Officer</strong>
+                <small>Since Oct 2010 to Jan 2015.</small>
+                <br>
+                Responsible for enhancing the turnaround time, policies & procedures & product features of retail products in addition to maximizing the bank revenues from existing portfolios <br>
+                I managed to enhance the bottom line profitability by 30% Y-o-Y, and boost the balance sheet by 25% Y-o-Y.
+              </p>
+              <p class="card-text">
+                <strong>Head of Products</strong>
+                <small>Since January 2018 - September 2018.</small>
+                <br>
+              Joined as a part of change management team to lead the transformation of Suez Canal Bank into Retail & SMEs Bank via introducing new products & services as well as process re-engineering & branches re-modelling aiming at changing the organizational culture & overall bank market share & profitability
+              </p>
+
+	</div>
+</div>
 </body>
+
 </html>
